<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaPedido">

    <TextView
        android:id="@+id/txtPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_nuevoPedido"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <EditText
        android:id="@+id/edtFechaEstimada"
        android:layout_width="333dp"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/hint_fechaEstimada"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edtDescripcionPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edtDescripcionPedido"
        android:layout_width="329dp"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/hint_descripcion"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edtImporte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFechaEstimada"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edtImporte"
        android:layout_width="329dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/hint_importe"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescripcionPedido"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAceptar"
        app:layout_constraintTop_toBottomOf="@+id/edtImporte"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brn_Aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtImporte"
        app:layout_constraintVertical_bias="0.5" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="326dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="@+id/edtFechaEstimada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPedido"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>